made Services section. Need to fix styles

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Software developer">
+    <meta name="keywords" content="Software, development, webpages, html, css, wordpress, java, javascript">
+    <meta name="author" content="Daniel Chrapczyński">
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/main.css">
-    <title>Document</title>
+    <title>Daniel Chrapczyński</title>
 </head>
 
 <body>
@@ -27,12 +31,73 @@
         </div>
     </header>
 
-    <section class="container" id="about"></section>
-    <section class="container" id="portfolio"></section>
-    <section class="container" id="contact"></section>
-    <section class="container" id="portfolio"></section>
+    <section class="container section-light" id="about">
+        <div class="section-header">
+            <h2>usługi</h2>
+        </div>
+        <div class="services-container">
+            <div class="single-service-container">
+                <figure class="single-service-item">
+                    <img src="icons/responsive.svg" alt="">
+                    <figcaption>Responsive web applications development</figcaption>
+                </figure>
+            </div>
+            <div class="single-service-container">
+                <figure class="single-service-item">
+                    <img src="icons/startup.png" alt="">
+                    <figcaption>Lorem ipsum dolor sit.</figcaption>
+                </figure>
+            </div>
+            <div class="single-service-container">
+                <figure class="single-service-item">
+                    <img src="icons/development.svg" alt="">
+                    <figcaption>Custom software</figcaption>
+                </figure>
+            </div>
+        </div>
+        <div class="services-question">
+            <div class="question-left">
+                <img src="icons/question.png" alt="">
+            </div>
+            <div class="question-right">
+                <div class="services-question-caption">
+                    <h4>Lorem ipsum?</h4>
+                    <h5>Lorem ipsum dolor sit amet.</h5>
+                </div>
+                <div class="button-container">
+                    <button class="btn-yellow">wypełnij brief</button>
+                </div>
+            </div>
+        </div>
+        <div class="skills-container">
+            <div class="skills-caption">
+                <h4>Technologie: </h4>
+            </div>
+            <figure class="skills-item">
+                <img src="icons/html.png" alt="">
+            </figure>
+            <figure class="skills-item">
+                <img src="icons/css.png" alt="">
+            </figure>
+            <figure class="skills-item">
+                <img src="icons/js.png" alt="">
+            </figure>
+            <figure class="skills-item">
+                <img src="icons/wordpress.png" alt="">
+            </figure>
+            <figure class="skills-item">
+                <img src="icons/php.png" alt="">
+            </figure>
+            <figure class="skills-item">
+                <img src="icons/Java.png" alt="">
+            </figure>
+        </div>
+    </section>
+    <section class="container section-dark" id="portfolio"></section>
+    <section class="container section-light" id="contact"></section>
+    <section class="container section-dark" id="portfolio"></section>
     <footer>
-        <span>Copyright &copy;2018 by Daniel Chrapczyński</span>
+        Copyright &copy;2018 by <span class="yellow">Daniel Chrapczyński</span>
     </footer>
 </body>
 
