Fixed 'Services' section styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Daniel Chrapczyński</h1>
             <h3>Software developer</h3>
             <div class="button-container">
-                <button class="btn-transparent">wypełnij brief</button>
+                <button class="btn-transparent-grey">wypełnij brief</button>
             </div>
         </div>
     </header>
@@ -62,10 +62,10 @@
             <div class="question-right">
                 <div class="services-question-caption">
                     <h4>Lorem ipsum?</h4>
-                    <h5>Lorem ipsum dolor sit amet.</h5>
+                    <h5>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, nam neque commodi!</h5>
                 </div>
                 <div class="button-container">
-                    <button class="btn-yellow">wypełnij brief</button>
+                    <button class="btn-transparent">wypełnij brief</button>
                 </div>
             </div>
         </div>
